Added google analytics for page visits and outbound clicks

--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
     <meta name="theme-color" content="black-translucent" />
 
     <title>My Racing Planner</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-E3973ZTX47"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-E3973ZTX47", { send_page_view: false });
+    </script>
   </head>
   <body>
     <div id="root"></div>
